--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
         },
       };
 
+      const fetchCat = async (text) => {
+        const OPEN_API_DOMAIN = "https://cataas.com";
+        const response = await fetch(`${OPEN_API_DOMAIN}/cat/says/${text}?json=true`);
+        const responseJson = await response.json();
+        return `${OPEN_API_DOMAIN}/${responseJson.url}`;
+      };
+
       const Title = (props) => {
         return <h1>{props.children}</h1>;
       };
@@ -74,6 +81,9 @@
       }
 
       function Favorites({ favorites }) {
+        if (favorites.length === 0) {
+          return <div>사진 위 하트를 눌러 고양이 사진을 저장해봐요!</div>;
+        }
         return (
           <ul className="favorites">
             {favorites.map((cat) => (
@@ -83,11 +93,13 @@
         );
       }
 
-      const MainCard = ({ img, onHeartClick }) => {
+      const MainCard = ({ img, onHeartClick, alreadyFavorite }) => {
+        const heartIcon = alreadyFavorite ? "💖" : "🤍";
+
         return (
           <div className="main-card">
             <img src={img} alt="고양이" width="400" />
-            <button onClick={onHeartClick}>🤍</button>
+            <button onClick={onHeartClick}>{heartIcon}</button>
           </div>
         );
       };
@@ -114,7 +126,7 @@
             return;
           }
 
-          updateMainCat();
+          updateMainCat(value);
         }
 
         return (
@@ -131,15 +143,43 @@
         const CAT2 = "https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn";
         const CAT3 = "https://cataas.com/cat/595f280b557291a9750ebf65/says/JavaScript";
 
-        const [counter, setCounter] = React.useState(jsonLocalStorage.getItem("counter"));
-        const [mainCardCat, setMainCardCat] = React.useState(CAT1);
-        const [favorites, setFavorites] = React.useState(jsonLocalStorage.getItem("favorites") || []);
+        // const [counter, setCounter] = React.useState(jsonLocalStorage.getItem("counter"));
 
-        function updateMainCat() {
-          setMainCardCat(CAT2);
-          const nextCounter = counter + 1;
-          setCounter(nextCounter);
-          jsonLocalStorage.setItem("counter", nextCounter);
+        const [counter, setCounter] = React.useState(() => {
+          return jsonLocalStorage.getItem("counter");
+        });
+
+        const [mainCardCat, setMainCardCat] = React.useState(CAT1);
+        // const [favorites, setFavorites] = React.useState(jsonLocalStorage.getItem("favorites") || []);
+
+        const [favorites, setFavorites] = React.useState(() => {
+          return jsonLocalStorage.getItem("favorites") || [];
+        });
+
+        async function setInitialCat() {
+          const newCat = await fetchCat("first cat");
+          setMainCardCat(newCat);
+        }
+
+        const alreadyFavorite = favorites.includes(mainCardCat);
+
+        React.useEffect(() => {
+          setInitialCat();
+
+          // return () => {};
+        }, []);
+
+        async function updateMainCat(value) {
+          const newCat = await fetchCat(value);
+          setMainCardCat(newCat);
+          // const nextCounter = counter + 1;
+          // setCounter(nextCounter);
+
+          setCounter((prev) => {
+            const nextCounter = prev + 1;
+            jsonLocalStorage.setItem("counter", nextCounter);
+            return nextCounter;
+          });
         }
 
         function handleHeartClick() {
@@ -148,11 +188,12 @@
           jsonLocalStorage.setItem("favorites", nextFavorites);
         }
 
+        const counterTitle = counter === null ? "" : counter + "번째";
         return (
           <div>
-            <Title>{counter}번째 고앵이 사진</Title>
+            <Title>{counterTitle} 고앵이 사진</Title>
             <Form updateMainCat={updateMainCat} />
-            <MainCard img={mainCardCat} onHeartClick={handleHeartClick} />
+            <MainCard img={mainCardCat} onHeartClick={handleHeartClick} alreadyFavorite={alreadyFavorite} />
             <Favorites favorites={favorites} />
           </div>
         );
